2007-10-25  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_load_from_gconf),
	(theme_set_custom_from_theme): try even harder to not let essential
	keys become NULL. Might fix bug #487257.

2007-10-25  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (style_init):
	* data/appearance.glade: move some more of the cursor size widget
	initialization to glade. This allows the slider to be updated properly
	on startup (bug #490103)

2007-10-24  Jens Granseuer  <jensgr@gmx.net>

        The fix for bug #420154 not only made the entry for the theme installer
        disappear from the menu, but also disabled mime-type handling for Gnome
        Theme Packages (bug #486811). Revert that change and use NoDisplay=true
        instead. This will remove the entry from the menu (not from the menu
        editor, though), and not break mime handling.

        * data/gnome-theme-installer.desktop.in.in: use NoDisplay=true instead
        of OnlyShowIn=;

2007-10-14  Jens Granseuer  <jensgr@gmx.net>

	When updating theme info from GConf or copying it for customization, we
	were ignoring xcursor settings. As a result, saved custom themes always
	had the default theme set. (bug #485709)

	* appearance-themes.c: (get_default_int_from_key),
	(theme_load_from_gconf), (theme_set_custom_from_theme): when setting up
	theme info, take cursor settings into account

2007-10-09  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_props_wp_set): fix crash if we fail to
	convert a filename to UTF-8

2007-09-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_store_sort_func): make theme sorting
	case-insensitive (bug #481224)

2007-09-16  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (main): add a comment for translators (bug #473379)

2007-09-16  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: don't set a fixed width for the toolbar button
	color label (bug #474317)

2007-09-09  Claude Paroz  <claude@2xlibre.net>
