@@ -1,3 +1,9 @@
+2007-10-26  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-style.c: (cursor_theme_delete_cb), (style_init):
+	* theme-util.c: (theme_delete): make the cursor themes delete button
+        work
+
 2007-10-25  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-themes.c: (theme_load_from_gconf),
